# kde1-kuickshow

./: .cvsignore  AUTHORS  BUGS  CMakeLists.txt  ChangeLog  INSTALL  Makefile.am  Makefile.cvs  Makefile.in  NEWS  README  TODO  VERSION  acconfig.h  acinclude.m4  aclocal.m4  automoc  config.h.in  configure  configure.in  kuickshow-0.6.3.lsm  kuickshow-0.6.3.spec  kuickshow.lsm.in  kuickshow.spec.in  libtool
doc/: Makefile.in
doc/en/: Makefile.am  Makefile.in  index.html
etc/: Makefile.am  Makefile.in
pics/: Makefile.am  Makefile.in
pics/toolbar/: Makefile.am  Makefile.in  ksconfig.xpm  ksexit.xpm  ksslide.xpm
po/: Makefile.am  Makefile.in  de.po  kuickshow.pot  pl.po
src/: .cvsignore  CMakeLists.txt  Makefile.am  Makefile.in  aboutwidget.cpp  aboutwidget.h  editdlg.cpp  editdlg.h  effc++  effects.h  filefinder.cpp  filefinder.h  fileview.cpp  fileview.h  imlibconfig.cpp  imlibconfig.h  imlibwidget.cpp  imlibwidget.h  kfileview.cpp  kfileview.h  kuickconfigdlg.cpp  kuickconfigdlg.h  kuickdata.cpp  kuickdata.h  kuickshow.cpp  kuickshow.h  kuickshow.kdelnk  kuickshow.xpm  kurlwidget.cpp  kurlwidget.h  logotabdialog.cpp  logotabdialog.h  main.cpp  mainwidget.cpp  mainwidget.h  mini-kuickshow.xpm  version.h
